--- a/styles/GeneralStyles.css
+++ b/styles/GeneralStyles.css
@@ -26,3 +26,51 @@ button:active {
     transition: all.1s;
 }
 
+div#header {
+    align-self: start;       /* oben im Grid platzieren */
+    text-align: center;
+    overflow: hidden;        /* verhindert, dass Text überläuft */
+    grid-column: 1 / -1;     /* über alle 3 Spalten */
+    color: #ECD407;
+    font-size: 5em;
+
+    #gameTitle {
+        margin: 0;
+        -webkit-text-stroke: 0.045em white;  /* weißer Umriss */
+        font-size: 100%;                     /* bezieht sich auf das 5em vom Eltern-Element */
+        font-weight: 900;
+        text-shadow: -0.13em 0.07em black;   /* dicker Schatten für Kontrast */
+    }
+
+    #credits {
+        margin: 0;
+        font-size: 25%;   /* skaliert mit dem 5em => eher klein */
+    }
+}
+
+#eichberg2{
+    position: absolute;
+    width: 8%;
+    left: 90%;
+    margin: 1%;
+
+
+    aspect-ratio: 1/1;  /* saubere quadratische Form */
+    background-color: transparent;
+    border: none;
+    background-image: url("../images/UnoEichberg.png");
+    background-size: contain;
+
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.2);
+    }
+    &:active{
+        transform: scale(0.8);
+    }
+}
+
+body:has(.speech-bubble[open]) #eichberg2{
+    display: none;
+}
+
