--- a/styles/AboutPage.css
+++ b/styles/AboutPage.css
@@ -1,11 +1,13 @@
 #aboutText {
     width: 80%;
+    height: fit-content;
     margin: 0 auto;
     padding: 20px;
     background-color: #ecd40a;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 2px 4px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
+    font-size: smaller;
     line-height: 1.6;
 }
 
@@ -17,4 +19,10 @@
     position: center;
     
 
+}
+
+#aboutText h2 {
+    font-size: 2em;
+    color: #941124;
+    margin-bottom: 10px;
 }
