Changed Size of Text Box

--- a/styles/AboutPage.css
+++ b/styles/AboutPage.css
@@ -1,6 +1,6 @@
 #aboutText {
     width: 80%;
-    height: fit-content;
+    height: 85%;
     margin: 0 auto;
     padding: 20px;
     background-color: #ecd40a;
