--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 @import url("gameStart.css");
 @import url("Gameplay.css");
 
-
 @import url("sampleCard.css");
 
 @import url("helpPage.css");
+@import url("AboutPage.css");
