--- a/styles/Gameplay.css
+++ b/styles/Gameplay.css
@@ -175,25 +175,127 @@
 
 }
 
-body#gameplay2 #player2{
-    border: 0.2cqw solid white;
+body#gameplay2{
+    #player2{
+        border: 0.2cqw solid white;
 
-    &:after {
-        content: "UYES!";
-        position: absolute;
-        top: -8%;
-        left: 13%;
-        font-size: 3cqw;
-        color: white;
-        -webkit-text-stroke: 0.07cqw black;
+        &:after {
+            content: "UYES!";
+            position: absolute;
+            top: -8%;
+            left: 13%;
+            font-size: 3cqw;
+            color: white;
+            -webkit-text-stroke: 0.07cqw black;
+            background-color: #D72600;
+            border: 0.5cqw solid #c8ac22;
+            border-radius: 25% 25% 25% 0;
+            }
+        }
+
+   #player3{
+
+        border: 0.8cqw solid #c8ac22;
         background-color: rgba(149, 145, 4, 0.5);
-        border: 0.25cqw solid black;
-        border-radius: 25% 25% 25% 0;
     }
 }
 
-body#gameplay2 #player3{
+body#gameplay3{
+    #player2{
+        border: 0.2cqw solid white;
 
-    border: 0.8cqw solid #c8ac22;
-    background-color: rgba(149, 145, 4, 0.5);
+        &:after {
+            content: "UYES!";
+            position: absolute;
+            top: -8%;
+            left: 13%;
+            font-size: 3cqw;
+            color: white;
+            -webkit-text-stroke: 0.07cqw black;
+            background-color: #D72600;
+            border: 0.5cqw solid #c8ac22;
+            border-radius: 25% 25% 25% 0;
+        }
+    }
+    #own-avatar{
+        border: 0.8cqw solid #c8ac22;
+        background-color: rgba(149, 145, 4, 0.5);
+    }
+    .card.normal{
+        *:hover{
+            cursor: grab;
+        }
+        *:active{
+            cursor: grabbing;
+        }
+
+    }
+}
+
+body#gameplay4{
+
+    #winner{
+        position: absolute;
+        z-index: 101;
+        border-radius: 10%;
+        aspect-ratio: 1/1;
+        width: 20%;
+        top: 20%;
+        left: 20%;
+
+        border: 0.8cqw solid #c8ac22;
+        background-color: rgba(149, 145, 4, 0.5);
+
+        background-image: url("../images/dragonavatar.png");
+        background-size: contain;
+
+        &:after{
+            content: " has won the game!";
+            color: white;
+            -webkit-text-stroke: 0.25cqw black;
+            width: 300%;
+            position: absolute;
+            left: 120%;
+            font-size: 8cqw;
+
+        }
+    }
+    #milchglas2{
+        position: fixed;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);  /* erzeugt den "Milchglas"-Effekt */
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+    }
+    #ending-buttons{
+        position: absolute;
+        z-index: 101;
+        display: flex;
+        width: 100%;
+        height: 30%;
+        justify-content: space-evenly;
+        align-items: center;
+        bottom: 0;
+
+        .ending{
+            flex-grow: 0;
+
+
+            aspect-ratio: 2.5/1;
+            width: 20%;
+
+            background-color: #ECD407;
+            border: solid 0.5cqh white;       /* ❗️cqh = container-height unit – bitte check Kompatibilität */
+            border-radius: 15%;
+            font-weight: 800;
+            font-size: 4cqw;
+        }
+    }
+
+}
+
+
+@media only screen and (max-width: 600px) {
+
 }
