--- a/styles/gameStart.css
+++ b/styles/gameStart.css
@@ -33,7 +33,6 @@
         height: 100%;
         justify-self: center;
         /*grid-column: 2;*/
-        /*grid-column: 1/-1;*/
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -195,4 +194,34 @@ div#menu-GameStart {
     font-weight: 800;
     font-size: 2.5cqw;
     margin: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+    #gamestart{
+        #start-settings{
+            width: 80%;
+            button.amount{
+                font-size: 5cqw;
+                width: 6cqw;
+            }
+        }
+    }
+    div#menu-GameStart {
+        section.menu-GameStart {
+            height: 140%;
+            /* alles in voller Breite/Höhe der Grid-Zelle */
+        }
+
+        button {
+            width: 40%;
+            font-size: 4.6cqw;
+        }
+    }
+    #help-GameStart{
+        position: absolute;
+        width: 30%;
+        font-size: 5cqw;
+        top: 15%;
+        left: 31%;
+    }
 }
