--- a/styles/Gameplay.css
+++ b/styles/Gameplay.css
@@ -1,3 +1,18 @@
+#UYES{
+    position: absolute;
+    aspect-ratio: 2.5/1;
+    width: 10%;
+    pointer-events: none;
+    top:85%;
+    left: 70%;
+    background-color: #676767;
+    border: solid 0.5cqh #3a3a3a;       /* ❗️cqh = container-height unit – bitte check Kompatibilität */
+    border-radius: 15%;
+    font-weight: 800;
+    font-size: 2cqw;
+
+}
+
 #player-hand-container{
     grid-row: 3;
     grid-column: 1/-1;
@@ -229,6 +244,11 @@ body#gameplay3{
             cursor: grabbing;
         }
 
+    }
+    #UYES{
+        pointer-events: initial;
+        background-color: #ECD407;
+        border: solid 0.5cqh white;
     }
 }
 
