--- a/styles/Intro.css
+++ b/styles/Intro.css
@@ -1,5 +1,7 @@
 @import url("IntroStartSite.css");
 @import url("IntroGameStart.css");
+@import url("IntrochooseLobby.css");
+
 
 /*Generelles Css für Intro*/
 /*erst auziehen des Milchglas um seite unscharf zu machen*/
