--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 @import url("GeneralStyles.css");
 
 @import url("startSite.css");
-@import url("gameStart.css");
+@import url("chooseLobby.css");
+@import url("createGame.css");
 @import url("Gameplay.css");
 
 @import url("sampleCard.css");
