--- a/styles/IntroCreateGame.css
+++ b/styles/IntroCreateGame.css
@@ -1,5 +1,5 @@
 /* Stil des zentralen Dialogs ("eichberg-figur") */
-#eichberg.gamestart {
+#eichberg.createGame {
     position: absolute;
     left: 30%;
     width: 25%;
@@ -7,7 +7,7 @@
 }
 
 /* Seitenspezifisches design/größe der sprechblase*/
-.speech-bubble.gamestart {
+.speech-bubble.createGame {
     width: 15vw;
     min-height: 10em;
     /*height: 20vw;*/
@@ -16,7 +16,7 @@
     left: 73vw;
 }
 
-button.introduction.gamestart {
+button.introduction.createGame {
     position: absolute;
     left: 72%;
     top: 80%;
@@ -24,27 +24,27 @@ button.introduction.gamestart {
     font-size: 1cqw;
 }
 
-.speech.gamestart {
+.speech.createGame {
     font-size: 1.9cqw;
 }
 
-#intro2 .speech.gamestart {
+#intro2 .speech.createGame {
     font-size: 2.2cqw;
 }
 
-#intro7 .speech.gamestart {
+#intro7 .speech.createGame {
     font-size: 1.8cqw;
 }
 
-#intro8 .speech.gamestart {
+#intro8 .speech.createGame {
     font-size: 1.8cqw;
 }
 
-#intro9 .speech.gamestart {
+#intro9 .speech.createGame {
     font-size: 3cqw;
 }
 
-#intro85 .speech.gamestart {
+#intro85 .speech.createGame {
     font-size: 2.3cqw;
 }
 
@@ -80,7 +80,7 @@ body:not(:has(#intro4[open])) {
 }
 
 body:not(:has(#intro5[open])) {
-    &:has(#intro6[open]) #back-Gamestart {
+    &:has(#intro6[open]) #back-createGame {
         z-index: 102;
         pointer-events: none;
         position: relative;
@@ -88,7 +88,7 @@ body:not(:has(#intro5[open])) {
 }
 
 body:not(:has(#intro6[open])) {
-    &:has(#intro7[open]) #continue-Gamestart {
+    &:has(#intro7[open]) #continue-createGame {
         z-index: 102;
         pointer-events: none;
         position: relative;
@@ -96,7 +96,7 @@ body:not(:has(#intro6[open])) {
 }
 
 body:not(:has(#intro7[open])) {
-    &:has(#intro8[open]) #help-GameStart {
+    &:has(#intro8[open]) #help-createGame {
         z-index: 102;
         pointer-events: none;
     }
@@ -104,24 +104,24 @@ body:not(:has(#intro7[open])) {
 
 
 @media only screen and (max-width: 600px) {
-    #eichberg.gamestart {
+    #eichberg.createGame {
         width: 50%;
         position: absolute;
         top: 10%;
         left: -30%;
     }
 
-    .speech-bubble.gamestart {
+    .speech-bubble.createGame {
         top: 8vw;
         left: 50vw;
         width: 30vw;
     }
 
-    .speech.gamestart {
+    .speech.createGame {
         font-size: 4.3cqw;
     }
 
-    button.introduction.gamestart {
+    button.introduction.createGame {
         left: 53%;
         top: 76%;
         width: 17cqw;
@@ -129,27 +129,27 @@ body:not(:has(#intro7[open])) {
     }
 
     /* Schriftgröße für bestimmte Intros */
-    #intro2 .speech.gamestart {
+    #intro2 .speech.createGame {
         font-size: 4.8cqw;
     }
 
-    #intro3 .speech.gamestart {
+    #intro3 .speech.createGame {
         font-size: 4.8cqw;
     }
 
-    #intro7 .speech.gamestart {
+    #intro7 .speech.createGame {
         font-size: 3.9cqw;
     }
 
-    #intro8 .speech.gamestart {
+    #intro8 .speech.createGame {
         font-size: 4.1cqw;
     }
 
-    #intro85 .speech.gamestart {
+    #intro85 .speech.createGame {
         font-size: 5.5cqw;
     }
 
-    #intro9 .speech.gamestart {
+    #intro9 .speech.createGame {
         font-size: 6cqw;
     }
 
