--- a/styles/IntrochooseLobby.css
+++ b/styles/IntrochooseLobby.css
@@ -24,7 +24,7 @@ button.introduction.chooseLobby{
     position: absolute;
     aspect-ratio: 2.6/1;
     width: 10%;
-    background-color: #ECD407;
+    background-color: var(--primary-yellow) ;
     border: solid 0.5cqh white;
     border-radius: 15%;
     font-weight: 800;
