--- a/styles/joinLobby.css
+++ b/styles/joinLobby.css
@@ -16,6 +16,7 @@ main{
     width: 20cqw;
     height: 4cqw;
     font-size: 2cqw;
+    cursor: text;
 }
 
 .joinForm{
@@ -24,10 +25,10 @@ main{
     width: 18%;
     font-weight: 800;
     font-size: 3cqw;
-    background-color: #ECD407;
+    background-color: var(--primary-yellow);
     border: solid 0.5cqh white;
 
     &#cancelJoin{
-        background-color: #d77a00;
+        background-color: var(--secondary-yellow);
     }
 }
