--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,6 +1,6 @@
-@import url("IntroStartSite.css");
-@import url("IntroCreateGame.css");
-@import url("IntrochooseLobby.css");
+@import url("introStartSite.css");
+@import url("introCreateGame.css");
+@import url("introChooseLobby.css");
 
 
 /*Generelles Css für Intro*/
