--- a/styles/startSite.css
+++ b/styles/startSite.css
@@ -33,25 +33,28 @@ div#menu {
         font-size: 100%;
         width: 100%;
         height: 100%;
-        /* alles in voller Breite/Höhe der Grid-Zelle */
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
     }
 
-    button {
+    .button {
+        flex-grow: 0;
         aspect-ratio: 2.5/1;
-        width: 20%;
-
+        width: 15%;
+        align-content: center;
         background-color: var(--primary-yellow);
         border: solid 0.5cqh white; /* ❗️cqh = container-height unit – bitte check Kompatibilität */
         border-radius: 15%;
         font-weight: 800;
-        font-size: 4cqw; /* ❗️cqw = container-width unit – modern, aber nicht überall unterstützt */
+        font-size: 3.5cqw; /* ❗️cqw = container-width unit – modern, aber nicht überall unterstützt */
     }
 
     #start {
-        width: 25%;
+        width: 20%;
         margin-left: 5%;
         margin-right: 5%;
-        font-size: 6cqw; /* größerer Start-Button */
+        font-size: 4.5cqw; /* größerer Start-Button */
     }
 }
 
