--- a/styles/generalStyles.css
+++ b/styles/generalStyles.css
@@ -23,10 +23,18 @@ a{
     text-align: center;
     color: black;
     text-decoration: none;
+    align-content: center;
 }
 
 button, .button {
     box-shadow: 0 0.25em 0 #808080;
+    background-color: var(--primary-yellow) ;
+    border: solid 0.5cqh white;
+    border-radius: 15%;
+    font-weight: 800;
+    font-size: 2.5cqw;
+    margin: 1em;
+    aspect-ratio: 2.6/1;
 }
 
 /* Ausnahme für Buttons: Zeiger-Cursor beim Hover */
@@ -38,6 +46,11 @@ button:active, .button:active {
     box-shadow: none;
     transform: translateY(0.25em);
     transition: all .1s;
+}
+
+.backButtonTop{
+    position: absolute;
+    width: 10%;
 }
 
 div#header {
