--- a/styles/introStartSite.css
+++ b/styles/introStartSite.css
@@ -29,12 +29,13 @@
 }
 
 
-button.introduction.startsite {
+button.introduction.startsite, .button.introduction.startsite{
     position: absolute;
     left: 75%;
     top: 80%;
     width: 7cqw; /* cqw = container width – kann bei kleinen Containern problematisch sein -> media queries */
-    font-size: 1.5cqw;
+    font-size: 2.5cqw;
+    border: 0.25cqw solid black;
 }
 
 
