--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,10 @@
 @import url("chooseLobby.css");
 @import url("createGame.css");
 @import url("joinLobby.css");
+@import url("lobby.css");
 
 
-@import url("createGame.css");
+
 @import url("gameplay.css");
 
 @import url("sampleCard.css");
