--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -1,7 +1,127 @@
-#player-lobby-container{
+#main.lobby{
+    all:initial;
+    display: flex;
+    flex-direction: column;
     grid-column: 1/-1;
-    border: solid white;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+}
+
+.gameCode{
+    display: flex;
+    align-content: center;
+    h2{
+        color: white;
+        font-weight: 900;
+        text-align: center;
+        margin: 0;
+    }
+
+    #refresh-code-button{
+        flex-grow: 0;
+        font-size: 1.5cqw;
+        width: 30%;
+        text-align: center;
+        margin: 2%;
+    }
+}
+
+
+
+
+
+
+#player-lobby-container{
+    background: darkgrey;
+    flex-grow: 1;
+    border: solid dimgrey;
     border-radius: 10%;
-    width: 80%;
+    width: 60%;
     justify-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+
+    h2{
+        color: black;
+        font-weight: 800;
+        text-align:center;
+        margin: 0;
+        font-size: 3cqw;
+    }
+
+}
+
+
+.player-lobby-fields{
+    position: relative;
+    width: 100%;
+    height: 10%;
+    flex-grow: 1;
+    border: 0.05em solid dimgrey;
+    align-content: center;
+    p{
+        &#hostTag{
+            color: var(--primary-yellow);
+            -webkit-text-stroke: 0.05cqw black;
+            font-weight: 800;
+            position: absolute;
+            left: 30%;
+            height: 25%;
+            font-size: 1.5cqw;
+            +p{
+                text-decoration: underline;
+            }
+        }
+        margin: 0;
+        &.openSlot{
+            color: dimgrey;
+            +.removePlayerButton{
+                display:none;
+            }
+        }
+        &.takenSlot{
+            font-size: 2cqw;
+            +.removePlayerButton{
+                padding: initial;
+                box-shadow: initial;
+                background-color: lightgrey;
+                border: 0.25cqw solid dimgrey;
+                font-weight: 800;
+                margin: initial;
+                /*aspect-ratio: 1/2;*/
+                /*text-align: center;*/
+                /*align-content: center;*/
+                /*height: 80%;*/
+                overflow: hidden;
+                text-overflow: ellipsis;
+                /*width: 4cqh;*/
+                position: absolute;
+                z-index: 5;
+                left: 70%;
+                top: 0.1cqw;
+                font-size: 1cqw;
+
+                &:active{
+                    transform: initial;
+                    transform: scale(1.2);
+
+                }
+
+
+            }
+        }
+    }
+    &.header{
+        align-content: center;
+
+    }
+}
+
+#startGameplay{
+    width: 25%;
 }
