--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -125,3 +125,9 @@
 #startGameplay{
     width: 25%;
 }
+
+#Joiner{
+    .removePlayerButton, #refresh-code-button, #startGameplay{
+        display: none;
+    }
+}
