Add player name input to create game screens
Introduced a required player name input field to both createGame.html and createGameNoIntro.html, updating instructional text accordingly. Improved placeholder text in joinLobby.html. Updated styles in createGame.css for the new input and adjusted introCreateGame.css to highlight the name input during the intro sequence.

--- a/styles/createGame.css
+++ b/styles/createGame.css
@@ -177,6 +177,16 @@ input .amount {
 }
 
 div#menu-createGame {
+
+    input{
+       font-size: 3.5cqw;
+
+        &:hover{
+            cursor: text;
+        }
+    }
+
+
     overflow: hidden;
     text-align: center;
     grid-column: 1 / -1;
@@ -209,10 +219,8 @@ div#menu-createGame {
     }
 
     div#menu-createGame {
-        section.menu-createGame {
-            height: 140%;
-            /* alles in voller Breite/Höhe der Grid-Zelle */
-        }
+
+
 
         button {
             width: 40%;
