--- a/styles/joinLobby.css
+++ b/styles/joinLobby.css
@@ -5,6 +5,7 @@ main{
     text-align: center;
     align-items: center;
     width: 100%;
+    flex-direction: column;
     *{
         width: 100%;
         flex-grow: 0;
@@ -17,12 +18,16 @@ main{
     height: 4cqw;
     font-size: 2cqw;
     cursor: text;
+    &::placeholder{
+        font-size: 1.8cqw;
+    }
 }
+
 
 .joinForm{
     border-radius: 10%;
     aspect-ratio: 2.5/1;
-    width: 18%;
+    width: 20%;
     font-weight: 800;
     font-size: 3cqw;
     background-color: var(--primary-yellow);
@@ -32,3 +37,21 @@ main{
         background-color: var(--secondary-yellow);
     }
 }
+
+.joinLobby{
+    form:first-child{
+        width: 30%;
+        #NameInput{
+            font-size: 3cqw;
+
+            &::placeholder{
+                font-size: 2.5cqw;
+
+            }
+        }
+
+    }
+
+}
+
+
