Update about page script and button styles
Added index.js script to aboutPage.html and adjusted #back-to-main-menu button styles in aboutPage.css for improved appearance.

--- a/styles/aboutPage.css
+++ b/styles/aboutPage.css
@@ -13,9 +13,9 @@
 
 #back-to-main-menu {
     text-align: center;
-    font-size: 1.2em;
-    height: fit-content;
-    width: fit-content;
+    font-size: 1.6em;
+    /*height: fit-content;*/
+    width: 15%;
 
 
 }
