--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -12,6 +12,7 @@
     display: flex;
     align-content: center;
     h2{
+        align-self: center;
         color: white;
         font-weight: 900;
         text-align: center;
