--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -1,3 +1,72 @@
+
+#helpButtonClicked{
+    display: none;
+
+    &.helpOpen{
+        display:flex;
+        flex-direction: column;
+        position: absolute;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px); /* erzeugt den "Milchglas"-Effekt */
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        justify-content: space-evenly;
+        align-items: center;
+
+        *{
+            width: 25%;
+            flex-grow: 0;
+        }
+        #closeHelpBtn{
+            background-color: var(--secondary-yellow);
+            position: absolute;
+            width: 10%;
+            top: 0;
+            left: 0;
+        }
+        #ExitGameBtn{
+            font-size: 2em;
+        }
+    }
+}
+
+#submitLeaving {
+    display: none;
+
+    &.exitOpen {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px); /* erzeugt den "Milchglas"-Effekt */
+        z-index: 101;
+        width: 100%;
+        height: 100%;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    h2{
+        font-size: 6em;
+        color: white;
+        -webkit-text-stroke: 0.045em black;
+        margin-bottom: 0;
+    }
+    div{
+        display: flex;
+        button{
+            width: 50%;
+        }
+    }
+
+}
+
+
+
+
+
+
 #main.lobby{
     all:initial;
     display: flex;
