--- a/styles/gameplay.css
+++ b/styles/gameplay.css
@@ -69,6 +69,12 @@
     transform: translateX(-0.5em);
 }
 
+.card.unplayable {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
 #piles {
     grid-column: 1/-1;
     display: flex;
