--- a/styles/gameplay.css
+++ b/styles/gameplay.css
@@ -101,11 +101,12 @@
 
 
 #player-avatars {
-    z-index: 1;
+    z-index: 5;
     align-self: center;
-    position: relative;
+    position: fixed;
     width: 90%;
-    margin: 0 auto;
+    left: 5%;
+    top: 22%;
     max-height: 70vh;
     overflow-y: auto;
 
