--- a/styles/gameplay.css
+++ b/styles/gameplay.css
@@ -102,23 +102,20 @@
 
 #player-avatars {
     z-index: 5;
-    align-self: center;
-    position: relative;
-    width: 90%;
-    margin: 0 auto;
-    max-height: 70vh;
-    overflow-y: auto;
+    position: absolute;
+    top: 5%;
+    left: 0;
+    right: 0;
+    width: 100%;
 
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 15%;
+    justify-content: space-between;
+    pointer-events: none;
 
     .row {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        gap: 1em;
     }
 
 }
