--- a/styles/gameplay.css
+++ b/styles/gameplay.css
@@ -99,26 +99,37 @@
     }
 }
 
-
-#player-avatars {
+#player-avatars1{
     z-index: 5;
     position: absolute;
-    top: 5%;
-    left: 0;
-    right: 0;
     width: 100%;
-
+    height: 100%;
     display: flex;
-    justify-content: space-between;
-    pointer-events: none;
+    align-items: center;
+    justify-content: center;
 
-    .row {
+    #player-avatars2 {
+        width: 80%;
+        height: 50%;
+
+
+
+
+        /*overflow: hidden;*/
+
         display: flex;
         flex-direction: column;
-        gap: 1em;
-    }
+        justify-content: space-between;
+        pointer-events: none;
 
+        .row {
+            display: flex;
+            justify-content: space-between;
+        }
+
+    }
 }
+
 
 .avatar {
     border: 0.2cqw solid white;
