--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -334,6 +334,23 @@ body#gameplay {
         }
     }
 
+    #wait-for-host {
+        position: absolute;
+        z-index: 101;
+        display: none;
+        width: 100%;
+        height: 30%;
+        justify-content: center;
+        align-items: center;
+        bottom: 0;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(10px);
+        color: white;
+        -webkit-text-stroke: 0.045cqw black;
+        font-weight: 800;
+        font-size: 5cqw;
+    }
+
 }
 
 #draw-pile {
@@ -365,6 +382,9 @@ body#gameplay {
     display: none;
 }
 
-@media only screen and (max-width: 600px) {
+.Joiner #wait-for-host {
+    display: flex;
+}
 
+@media only screen and (max-width: 600px) {
 }
