Adjust z-index and position for avatars and bubble
Set #player-avatars1 z-index to -1 to move it behind other elements. Updated .uyes-bubble positioning from top/left to bottom/left for improved layout.

--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -100,7 +100,7 @@
 }
 
 #player-avatars1{
-    z-index: 0;
+    z-index: -1;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -192,8 +192,8 @@
 
 .uyes-bubble {
     position: absolute;
-    top: -8%;
-    left: 13%;
+    bottom: 110%;
+    left: 110%;
     font-size: 3cqw;
     color: white;
     -webkit-text-stroke: 0.07cqw black;
