--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -287,6 +287,19 @@ body#gameplay {
 
         background-size: contain;
 
+        .player-name {
+            position: absolute;
+            top: -1.2em;
+            left: 50%;
+            transform: translateX(-50%);
+            width: max-content;
+            color: white;
+            -webkit-text-stroke: 0.05cqw black;
+            font-weight: 600;
+            pointer-events: none;
+            text-shadow: 0 0.05em 0.1em black;
+        }
+
         &:after {
             content: " has won the game!";
             color: white;
