Add game direction icon to gameplay UI
Introduced a new #gameDirection div with a Font Awesome rotate icon to the gameplay.html file and styled it in gameplay.css. This provides a visual cue for game direction, enhancing the user interface.

--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -463,3 +463,17 @@ body#gameplay {
     }
 
 }
+
+#gameDirection{
+    position: absolute;
+    color: white;
+    display:flex;
+    font-size: 500%;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    justify-content: center;
+    *{
+        margin-top: 15%;
+    }
+}
