Update margin-top unit in gameplay styles
Changed the margin-top value from 15% to 20cqh for elements within the gameplay body. This uses the container query height unit for improved responsive design.

--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -474,6 +474,6 @@ body#gameplay {
     z-index: -1;
     justify-content: center;
     *{
-        margin-top: 15%;
+        margin-top: 20cqh;
     }
 }
